# video-autoworker

./: .gitignore  OpenClaw Profiles Desktop.command  README.md  package.json  pnpm-lock.yaml
messages/: en.json  zh.json
scripts/: aiworker-runtime-app  aiworker-runtime-launcher-Info.plist  aiworker-runtime-launcher.applescript  build-aiworker-runtime-launcher.sh  start-aiworker-runtime.sh  start-openclaw-profiles-desktop.sh  start-openclaw-profiles-server.sh  start-openclaw-profiles-tauri.sh  start-openclaw-profiles-web.sh  start-standalone.sh
src/: nav-rail.tsx  proxy.test.ts  proxy.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx
src/app/[[...panel]]/: page.tsx
src/app/login/: page.tsx
src/app/setup/: page.tsx
src/components/chat/: chat-workspace.tsx  conversation-list.tsx  session-kind-brand.tsx
src/components/dashboard/: dashboard.tsx  empty-state-launchpad.tsx  sessions-list.tsx  sidebar.tsx  stats-grid.tsx  widget-grid.tsx  widget-primitives.tsx
src/components/layout/: header-bar.tsx  nav-rail.tsx
src/i18n/: request.ts
src/lib/: agent-runtimes.ts  auth.ts  coordinator-routing.ts  dashboard-widgets.ts  device-identity.ts  gateway-url.ts  logger.ts  navigation.ts  openclaw-materials.ts  openclaw-profiles.ts  openclaw-session-source.ts  openclaw-startup.ts  runtime-provider.ts  scheduler.ts  sessions.ts  task-dispatch.ts  themes.ts  transcript-parser.ts  validation.ts  websocket-utils.ts  websocket.ts
(+69 files in other folders)
