[package]
name = "openclaw-control-center"
version = "0.1.0"
description = "OpenClaw Profiles native desktop control center"
authors = ["OpenClaw"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
